fix positioning on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,7 +9,7 @@
 }
 
 h1.ce-header {
-  @apply font-bold text-xl my-2;
+  @apply font-bold text-xl mb-0 -mt-2;
 }
 
 .ce-header {
